Fixed truncated label names in members list
no refs.
- fixed Import related labels being truncated in the label filter dropdown list on the Members screen

--- a/ghost/admin/app/styles/layouts/members.css
+++ b/ghost/admin/app/styles/layouts/members.css
@@ -212,6 +212,14 @@ p.gh-members-list-email {
     border-bottom-right-radius: 0px !important;
 }
 
+.dropdown.members-label-list {
+    width: 225px;
+}
+
+.dropdown.members-label-list .dropdown-label {
+    width: 205px;
+}
+
 
 @media (max-width: 1100px) {
     .gh-members-chart-summary-data {
